--- a/cypress-tutorial/package.json
+++ b/cypress-tutorial/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^9.7.0"
+    "cypress": "^9.7.0",
+    "mochawesome": "^7.1.3"
   }
 }
